--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,14 +3,20 @@ body, html {
     font-family: sans-serif;
 }
 .chatBot{
-  width: 39%;
+  width: 32%;
   padding: 2%;
   overflow-y: scroll;
-  max-height: 37rem;
+  height: 32rem;
+  box-shadow: 0px 0px 9px 4px #00000054;
+  left: 3%;
+  position: absolute;
+  top: 10%;
+  border-radius: 14px;
+
   }
 .container {
   border: 2px solid #dedede;
-  background-color: #f1f1f1;
+  background-color: #fff0ed;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
@@ -49,4 +55,35 @@ body, html {
 .time-left {
   float: left;
   color: #999;
+}
+
+.send{
+    position: sticky;
+    bottom: 0;
+}
+
+.sendBtn{
+  background: url("/static/img/send.png");
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fff0ed; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #bbafad; 
 }
