--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,23 @@
 
 {% block body %}
 
-<div class="container chatBot">
+<div class="container"style="width: 35%;
+position: absolute;
+top: 0%;
+left: 3%;
+border-radius: 10px;
+border: none;
+    box-shadow: 0px 0px 9px 4px #00000054;background-color: #fdfdfd;">
+  <input type="image" src="static/img/discussion.png" alt="Submit" width="48" height="48" style="padding-right: 12%;" > 
+  <input type="image" src="static/img/favoris.png" alt="Submit" width="48" height="48" style="padding-right: 12%;"> 
+  <input type="image" src="static/img/historique.png" alt="Submit" width="48" height="48" style="padding-right: 12%;"> 
+  <input type="image" src="static/img/quiz.png" alt="Submit" width="48" height="48" style="padding-right: 12%;"> 
+  <input type="image" src="static/img/decouverte.png" alt="Submit" width="48" height="48" style="padding-right: 11%;"> 
+  <input type="image" src="static/img/menu.png" alt="Submit" width="9" height="48">
+</div>
+<div class="chatBot">
 
-    <!-- <div class="container">
+    <div class="container">
       <img src="static/img/gallic.png" alt="Avatar" style="width:100%;">
       <p>Hello. How are you today?</p>
       <span class="time-right">11:00</span>
@@ -22,7 +36,7 @@
       <img src="static/img/gallic.png" alt="Avatar" class="right" style="width:100%;">
       <p>Hey! I'm fine. Thanks for asking!</p>
       <span class="time-left">11:01</span>
-    </div> -->
+    </div>
     {% if message %}
         <div class="container darker">
           <img src="static/img/gallic.png" alt="Avatar" class="right" style="width:100%;">
@@ -36,11 +50,17 @@
         </div>
     {% endif%}
 
-    <div class="form">
-        <form action="/" method="POST">
-            <input type="text" name="content" id="content" style="width: 84%;">
-            <input type="submit" value="Add Task">
-        </form>
-    </div>
+    
+</div>
+<div class="form" style=" position: absolute;bottom: 21%;left: 3%;width: 36%;">
+  <form action="/" method="POST">
+      <input type="text" name="content" id="content" style="width: 84%;height: 2rem;border-radius: 25px;outline: none;border: 1px solid #999;margin-right: 2%;    box-shadow: 0px 0px 9px 4px #00000054;"autocomplete="false">
+      <input type="image" src="static/img/send.png" alt="Submit" width="48" height="48" style="background-color: crimson;border-radius: 25px;width: 6%;height: 100%;top: 0%;position: absolute;    box-shadow: 0px 0px 9px 4px #00000054;"> 
+      <input type="image" src="static/img/reccord.png" alt="Submit" style="background-color: crimson;border-radius: 25px;width: 6%;height: 100%;position: absolute;right: 0;    box-shadow: 0px 0px 9px 4px #00000054;">     
+  </form>
+</div>
+<div style="padding: 0;padding-bottom: 30.95815%;position: absolute;display: block;height: 0;width: 48%;right: 2%;top: 3%;">
+  <iframe style="position: absolute;  top: 0; bottom: 0; left: 0; width: 100%; height: 100%; border: 0;     box-shadow: 0px 0px 9px 4px #00000054;border-radius: 14px;" src="https://gallica.bnf.fr/ark:/12148/btv1b53216179f/f1.item.mini"">
+  </iframe>
 </div>
 {% endblock %}
